navbar overflow issue

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -18,12 +18,18 @@ p {
     margin: 8px 0;
 }
 
+html,
 body {
-    width: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
     margin: 0;
     padding: 0;
     background: #343434;
+}
+
+.body {
+    position: relative;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 .btn-default {
@@ -151,10 +157,10 @@ nav {
     .navigation {
         position: absolute;
         top: 0;
-        right: -50%;
-        width: 50%;
+        right: -250px;
+        width: 250px;
         background-color: #4548f4;
-        height: 100%;
+        height: 100vh;
         transition: all 0.4s ease;
     }
 
